2.8.0

Added armor types! Cloth, Leather, Plate! 

All old items will be plate. Still not sure what to do as their ID is "chest" instead of "plate_chest", might fix it with a breaking change when an expansion happens or 1.15 port.



gears now don't add stats if they have only 1 or 2 durability. This is a fix for mods that prevent items from being broken and keep them at 1 durability.
They should be now useless as they are supposed to.
added on stat calculation event. You can use this to add stats from your own sources, or remove them lol
added collect gear event. This should allow a bit more addon support. 
core stats like dexterity now scale a lot slower. (code rewrite, bugs possible)
fixed player base stats scale value applying to lvl 1 value
sped up modify station a bit
2.7.4
try fix server crash on profession block loading client side class
2.7.3
* if repair only in station is set true in config, mod's items won't be able to be combined in craft, repaired in anvil or in other vanilla blocks. 
This is a fix to items being combinable in craft grid, but is probably it'll stop repair from other mods too. Either way it suits the config name.
updated to forge 28.1.10
added xp penalty on death (configurable)
buffed regenerate to heal twice as fast. This is a 100% buff, i'll probably have to nerf it a bit
jewerly can now be enchanted with unbreaking
2.7.2
attempting performance improvements
updated to forge 28.1.6
2.7.1
fixed bonus weapon dmg spell
nerfed major arcana chaos stats a bit, they had too many stats.
added a new currency item that gives great chaos stats, but is rare and gives large break chance.
added curios min version requirement. not sure if works
added max instability config and increased default value to 500 from 250
2.7.0

ADDED PROFESSIONS!

Professions are basically a way to craft things, but gated by your profession level. Max lvl of recipes is 100, but max profession lvl is 1000. Each lvl gives tiny bonus chance to