@@ -645,6 +645,51 @@
 "_comment": " [CATEGORY]: WORDS - NAMES",
 
 
+"_comment": " [CATEGORY]: SUFFIXES - NAMES",
+
+	"mmorpg.suffix.fire_of_dissonance": "Of Flame's Dissonance",
+	"mmorpg.suffix.nature_of_dissonance": "Of Venom's Dissonance",
+	"mmorpg.suffix.of_axe_flurry": "Of Axe Flurry",
+	"mmorpg.suffix.of_balance": "Of Balance",
+	"mmorpg.suffix.of_behemoths": "Of Behemoths",
+	"mmorpg.suffix.of_blizzards": "Of Blizzards",
+	"mmorpg.suffix.of_bow_flurry": "Of Bow Flurry",
+	"mmorpg.suffix.of_critical_damage": "Of Critical Damage",
+	"mmorpg.suffix.of_critical_hits": "Of Critical Hits",
+	"mmorpg.suffix.of_critical_unity": "Of Critical Unity",
+	"mmorpg.suffix.of_crossbow_flurry": "Of CrossBow Flurry",
+	"mmorpg.suffix.of_earthquakes": "Of Earthquakes",
+	"mmorpg.suffix.of_element_resist": "Of Element Resist",
+	"mmorpg.suffix.of_firestorms": "Of Firestorms",
+	"mmorpg.suffix.of_giants": "Of Giants",
+	"mmorpg.suffix.of_godhood": "Of Godhood",
+	"mmorpg.suffix.of_guidance": "Of Guidance",
+	"mmorpg.suffix.of_hammer_flurry": "Of Hammer Flurry",
+	"mmorpg.suffix.of_immortality": "Of Immortality",
+	"mmorpg.suffix.of_major_affinity_fire": "Of Major Fire Affinity",
+	"mmorpg.suffix.of_major_affinity_nature": "Of Major Nature Affinity",
+	"mmorpg.suffix.of_major_affinity_thunder": "Of Major Thunder Affinity",
+	"mmorpg.suffix.of_major_affinity_water": "Of Major Water Affinity",
+	"mmorpg.suffix.of_mana_regen": "Of Mana Regen",
+	"mmorpg.suffix.of_rock_skin": "Of Rock Skin",
+	"mmorpg.suffix.of_staff_flurry": "Of Staff Flurry",
+	"mmorpg.suffix.of_swiftness": "Of Swiftness",
+	"mmorpg.suffix.of_sword_flurry": "Of Sword Flurry",
+	"mmorpg.suffix.of_the_hydra": "Of the Hydra",
+	"mmorpg.suffix.of_the_sage": "Of The Sage",
+	"mmorpg.suffix.of_thunderstorms": "Of Thunderstorms",
+	"mmorpg.suffix.of_vitality": "Of Vitality",
+	"mmorpg.suffix.offorce": "Of Force",
+	"mmorpg.suffix.ofhiddensense": "Of Hidden Sense",
+	"mmorpg.suffix.ofrockpiercing": "Of Rock Piercing",
+	"mmorpg.suffix.ofthedepths": "Of The Depths",
+	"mmorpg.suffix.ofvampirism": "Of Vampirism",
+	"mmorpg.suffix.thunder_of_dissonance": "Of Lightning's Dissonance",
+	"mmorpg.suffix.water_of_dissonance": "Of Frost's Dissonance",
+
+"_comment": " [CATEGORY]: SUFFIXES - NAMES",
+
+
 "_comment": " [CATEGORY]: STATS - NAMES",
 
 	"mmorpg.stat.acidbolt_power": "§cVenom Bolt Power",
@@ -857,51 +902,6 @@
 "_comment": " [CATEGORY]: STATS - NAMES",
 
 
-"_comment": " [CATEGORY]: SUFFIXES - NAMES",
-
-	"mmorpg.suffix.fire_of_dissonance": "Of Flame's Dissonance",
-	"mmorpg.suffix.nature_of_dissonance": "Of Venom's Dissonance",
-	"mmorpg.suffix.of_axe_flurry": "Of Axe Flurry",
-	"mmorpg.suffix.of_balance": "Of Balance",
-	"mmorpg.suffix.of_behemoths": "Of Behemoths",
-	"mmorpg.suffix.of_blizzards": "Of Blizzards",
-	"mmorpg.suffix.of_bow_flurry": "Of Bow Flurry",
-	"mmorpg.suffix.of_critical_damage": "Of Critical Damage",
-	"mmorpg.suffix.of_critical_hits": "Of Critical Hits",
-	"mmorpg.suffix.of_critical_unity": "Of Critical Unity",
-	"mmorpg.suffix.of_crossbow_flurry": "Of CrossBow Flurry",
-	"mmorpg.suffix.of_earthquakes": "Of Earthquakes",
-	"mmorpg.suffix.of_element_resist": "Of Element Resist",
-	"mmorpg.suffix.of_firestorms": "Of Firestorms",
-	"mmorpg.suffix.of_giants": "Of Giants",
-	"mmorpg.suffix.of_godhood": "Of Godhood",
-	"mmorpg.suffix.of_guidance": "Of Guidance",
-	"mmorpg.suffix.of_hammer_flurry": "Of Hammer Flurry",
-	"mmorpg.suffix.of_immortality": "Of Immortality",
-	"mmorpg.suffix.of_major_affinity_fire": "Of Major Fire Affinity",
-	"mmorpg.suffix.of_major_affinity_nature": "Of Major Nature Affinity",
-	"mmorpg.suffix.of_major_affinity_thunder": "Of Major Thunder Affinity",
-	"mmorpg.suffix.of_major_affinity_water": "Of Major Water Affinity",
-	"mmorpg.suffix.of_mana_regen": "Of Mana Regen",
-	"mmorpg.suffix.of_rock_skin": "Of Rock Skin",
-	"mmorpg.suffix.of_staff_flurry": "Of Staff Flurry",
-	"mmorpg.suffix.of_swiftness": "Of Swiftness",
-	"mmorpg.suffix.of_sword_flurry": "Of Sword Flurry",
-	"mmorpg.suffix.of_the_hydra": "Of the Hydra",
-	"mmorpg.suffix.of_the_sage": "Of The Sage",
-	"mmorpg.suffix.of_thunderstorms": "Of Thunderstorms",
-	"mmorpg.suffix.of_vitality": "Of Vitality",
-	"mmorpg.suffix.offorce": "Of Force",
-	"mmorpg.suffix.ofhiddensense": "Of Hidden Sense",
-	"mmorpg.suffix.ofrockpiercing": "Of Rock Piercing",
-	"mmorpg.suffix.ofthedepths": "Of The Depths",
-	"mmorpg.suffix.ofvampirism": "Of Vampirism",
-	"mmorpg.suffix.thunder_of_dissonance": "Of Lightning's Dissonance",
-	"mmorpg.suffix.water_of_dissonance": "Of Frost's Dissonance",
-
-"_comment": " [CATEGORY]: SUFFIXES - NAMES",
-
-
 "_comment": " [CATEGORY]: ADVANCEMENT DESCRIPTIONS - NAMES",
 
 	"mmorpg.advancement.desc.addaffix": "Unique items have lower chance to gain affixes, that's why these currencies are so important",
@@ -1042,46 +1042,6 @@
 	"item.mmorpg.uniques.sword.water_ele_saber0": "§eSaber of Frost madness",
 
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
-
-
-"_comment": " [CATEGORY]: POTIONS - NAMES",
-
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_1": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_10": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_100": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_25": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_50": "Alchemy Buff",
-	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_75": "Alchemy Buff",
-	"effect.mmorpg.aoe_regen": "Aoe Regen",
-	"effect.mmorpg.bonus_flame_dmg": "+ Flame Dmg",
-	"effect.mmorpg.bonus_frost_dmg": "+ Frost Dmg",
-	"effect.mmorpg.bonus_lightning_dmg": "+ Lightning Dmg",
-	"effect.mmorpg.bonus_venom_dmg": "+ Venom Dmg",
-	"effect.mmorpg.cleanse_poison": "Cleanse Poison",
-	"effect.mmorpg.energy_regen": "Regen Energy",
-	"effect.mmorpg.mana_regen": "Regen Mana",
-	"effect.mmorpg.self_regen": "Regenerate",
-	"effect.mmorpg.teleport_protection": "Teleport Guard",
-
-"_comment": " [CATEGORY]: POTIONS - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
@@ -1232,6 +1192,46 @@
 	"item.mmorpg.torch.torch5": "§dTorch",
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
+
+
+"_comment": " [CATEGORY]: POTIONS - NAMES",
+
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.ene_regen.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.hp_regen.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.loot_bonus.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_1": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_10": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_100": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_25": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_50": "Alchemy Buff",
+	"effect.mmorpg.alchemy.buff.mana_regen.potion_lvl_75": "Alchemy Buff",
+	"effect.mmorpg.aoe_regen": "Aoe Regen",
+	"effect.mmorpg.bonus_flame_dmg": "+ Flame Dmg",
+	"effect.mmorpg.bonus_frost_dmg": "+ Frost Dmg",
+	"effect.mmorpg.bonus_lightning_dmg": "+ Lightning Dmg",
+	"effect.mmorpg.bonus_venom_dmg": "+ Venom Dmg",
+	"effect.mmorpg.cleanse_poison": "Cleanse Poison",
+	"effect.mmorpg.energy_regen": "Regen Energy",
+	"effect.mmorpg.mana_regen": "Regen Mana",
+	"effect.mmorpg.self_regen": "Regenerate",
+	"effect.mmorpg.teleport_protection": "Teleport Guard",
+
+"_comment": " [CATEGORY]: POTIONS - NAMES",
 
 
 "_comment": " [CATEGORY]: WORLD TYPES - NAMES",
